Fix the bug causing an issue with the scrollbar on the Home Page

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,7 @@
 @media (max-width: 768px) {
   .home-container {
     height: 100vh;
-    height: -webkit-fill-available;
+    height: -webkit-fill-available !important;
   }
 }
 .home-container {
